--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,14 @@
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
+		"svelte-windicss-preprocess": "^4.2.8",
 		"tailwindcss": "^3.1.5",
 		"vite": "^2.9.13"
 	},
 	"type": "module",
 	"dependencies": {
-		"axios": "^0.27.2"
+		"axios": "^0.27.2",
+		"boostrap": "^2.0.0",
+		"bootstrap": "^5.1.3"
 	}
 }
