--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "cloudinary": "^1.30.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
