--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "service": "nodemon src/index.js"
+    "service": "nodemon"
   },
   "keywords": [],
   "author": "",
