--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
     "cloudinary": "^1.30.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
@@ -46,7 +45,8 @@
     "watch": [
       "src",
       ".env",
-      ".env.example"
+      ".env.example",
+      "package.json"
     ],
     "exec": "node -r dotenv/config src/index.js",
     "ext": "js"
